objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Category__c</fullName>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Named Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Segment__c</fullName>
        <label>Account Segment</label>
        <picklist>
            <picklistValues>
                <fullName>UBS CORPORATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVT/PSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSUBANK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail &amp; Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UBS Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KEY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KEY NEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAP NEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmailCurrentOwner__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>EmailCurrentOwner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailPreviousOwner__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>EmailPreviousOwner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>NumOfContacts__c</fullName>
        <label>NumOfContacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Expiration_Date__c</fullName>
        <label>Warranty Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <formula>Warranty_Expiration_Date__c - 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <label>Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>1-Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Segment</fullName>
        <active>true</active>
        <description>Customer Segment Account</description>
        <label>Customer Segment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Market_Segment</fullName>
        <active>true</active>
        <description>Account Type in Market Segment</description>
        <label>Market Segment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Segment</fullName>
        <active>true</active>
        <description>Account Type is Service Segment</description>
        <label>Service Segment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>TestHiddenField</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(SLASerialNumber__c)  &lt;  10</errorConditionFormula>
        <errorMessage>Error</errorMessage>
    </validationRules>
</CustomObject>